Fix border radius
Wooohoooo.. :tada:

Downside: Overflowing content wouldn't be possible. We'll have to see if we need it.

--- a/src/select-menu/select-menu.scss
+++ b/src/select-menu/select-menu.scss
@@ -55,7 +55,8 @@
   pointer-events: auto;
   flex-direction: column;
   background-color: $gray-100;
-  border-radius: $border-radius * 2; // TODO: New variable?
+  border-radius: $border-radius * 2;
+  overflow: hidden; // Enables border radius on scrollable child elements
   box-shadow: 0 0 18px rgba(0, 0, 0, 0.4);
   animation: SelectMenu-modal-animation 0.12s cubic-bezier(0, 0.1, 0.1, 1) backwards;
 
@@ -152,11 +153,6 @@
   overflow-y: auto;
   border-top: $border;
   -webkit-overflow-scrolling: touch; // Adds momentum + bouncy scrolling
-
-  &:last-child {
-    border-bottom-right-radius: inherit;
-    border-bottom-left-radius: inherit;
-  }
 }
 
 // List Item
@@ -181,11 +177,6 @@
     padding-top: $spacer-2;
     padding-bottom: $spacer-2;
   }
-}
-
-.SelectMenu-list:last-child .SelectMenu-item:last-child {
-  border-bottom-right-radius: inherit;
-  border-bottom-left-radius: inherit;
 }
 
 // Icon
@@ -221,11 +212,6 @@
   padding: $spacer-4 $spacer-3;
   text-align: center;
   background-color: $bg-white;
-
-  &:last-child {
-    border-bottom-right-radius: inherit;
-    border-bottom-left-radius: inherit;
-  }
 }
 
 // Tabs
